[gd_scene load_steps=42 format=3 uid="uid://c51w31cirngs7"]

[ext_resource type="Script" path="res://Scenes/player.gd" id="1_btpoi"]
[ext_resource type="AudioStream" uid="uid://bh1falqx3lhi4" path="res://Sounds/disasters/nature/wind_moderate.wav" id="2_8ny0w"]
[ext_resource type="AudioStream" uid="uid://cwlgb5p4ow3tr" path="res://Sounds/disasters/nature/wind_weak.wav" id="2_fjmn6"]
[ext_resource type="Texture2D" uid="uid://srk0pveigh2u" path="res://Sprites/kenney_particle_pack/slash_01.png" id="2_uyiao"]
[ext_resource type="Script" path="res://Scenes/Pause_menu.gd" id="2_vj7s0"]
[ext_resource type="Texture2D" uid="uid://bevx5iyc2q82h" path="res://Sprites/kenney_particle_pack/smoke_01.png" id="3_kstye"]
[ext_resource type="Script" path="res://Scenes/Hud.gd" id="3_pgssk"]
[ext_resource type="Texture2D" uid="uid://gwwhay61ha7p" path="res://Sprites/heart.png" id="4_ni53t"]
[ext_resource type="AudioStream" uid="uid://2enmqi3m2mv0" path="res://Sounds/disasters/nature/wind_heavy.wav" id="4_qip45"]
[ext_resource type="AudioStream" uid="uid://d2vgse17u5635" path="res://Sounds/disasters/player/heartbeat.wav" id="6_vn0ni"]
[ext_resource type="Script" path="res://Scenes/Chat.gd" id="6_wgonp"]
[ext_resource type="Shader" path="res://UnderWater.gdshader" id="7_787g2"]
[ext_resource type="Script" path="res://Scenes/Warning Hud.gd" id="7_k0mbh"]
[ext_resource type="Texture2D" uid="uid://66hhd27hjdj8" path="res://Icons/disasters.png" id="8_5jfek"]
[ext_resource type="Shader" path="res://UnderLava.gdshader" id="8_txqea"]
[ext_resource type="Script" path="res://Scenes/Players List Menu.gd" id="8_u7k75"]
[ext_resource type="PackedScene" uid="uid://dmr0fcamx7t56" path="res://addons/virtual_joystick/virtual_joystick_scene.tscn" id="14_nhtb3"]
[ext_resource type="Texture2D" uid="uid://u4gj8mq7yl2v" path="res://Icons/Pause.png" id="15_beddy"]
[ext_resource type="Texture2D" uid="uid://bau3vk2guhl36" path="res://Icons/jump.png" id="16_p2ihs"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_xeewm"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_ypag4"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_r4028"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_y4sl8"]
transparency = 1
cull_mode = 2
shading_mode = 0
vertex_color_use_as_albedo = true
vertex_color_is_srgb = true
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
use_particle_trails = true

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_2km3b"]
emission_shape = 6
emission_ring_axis = Vector3(0, 1, 0)
emission_ring_height = 0.5
emission_ring_radius = 50.0
emission_ring_inner_radius = 4.0
direction = Vector3(0, -1, 0)
spread = 5.0
initial_velocity_min = 30.0
initial_velocity_max = 30.0
color = Color(0.933333, 1, 1, 1)
collision_mode = 2
collision_use_scale = true
sub_emitter_mode = 3
sub_emitter_amount_at_collision = 32
sub_emitter_keep_velocity = true

[sub_resource type="Curve" id="Curve_vyn2q"]
max_value = 0.5
_data = [Vector2(0.51227, 0.0858616), 0.0, 0.0, 0, 0]
point_count = 1

[sub_resource type="RibbonTrailMesh" id="RibbonTrailMesh_hmkji"]
curve = SubResource("Curve_vyn2q")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_y17jh"]
transparency = 1
shading_mode = 0
vertex_color_use_as_albedo = true
vertex_color_is_srgb = true
albedo_texture = ExtResource("2_uyiao")
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_584xw"]
emission_shape = 6
emission_ring_axis = Vector3(0, 1, 0)
emission_ring_height = 0.5
emission_ring_radius = 50.0
emission_ring_inner_radius = 4.0
gravity = Vector3(0, 0, 0)
scale_max = 2.0
color = Color(0, 0, 0.745098, 1)
collision_mode = 1
collision_friction = 0.0
collision_bounce = 0.0
collision_use_scale = true

[sub_resource type="QuadMesh" id="QuadMesh_g5it5"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_yas20"]
transparency = 1
shading_mode = 0
vertex_color_use_as_albedo = true
vertex_color_is_srgb = true
albedo_texture = ExtResource("3_kstye")
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_d0h3l"]
emission_shape = 6
emission_ring_axis = Vector3(0, 1, 0)
emission_ring_height = 0.5
emission_ring_radius = 50.0
emission_ring_inner_radius = 4.0
direction = Vector3(1, -1, 0)
spread = 5.0
initial_velocity_min = 30.0
initial_velocity_max = 30.0
color = Color(0.670588, 0.670588, 0.670588, 1)
turbulence_enabled = true
collision_mode = 1
collision_friction = 0.0
collision_bounce = 0.0
collision_use_scale = true

[sub_resource type="RibbonTrailMesh" id="RibbonTrailMesh_jh2bo"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qhtnm"]
transparency = 1
shading_mode = 0
vertex_color_use_as_albedo = true
vertex_color_is_srgb = true
albedo_texture = ExtResource("3_kstye")
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_5dllp"]
emission_shape = 6
emission_ring_axis = Vector3(0, 1, 0)
emission_ring_height = 0.5
emission_ring_radius = 50.0
emission_ring_inner_radius = 4.0
direction = Vector3(0, -1, 0)
spread = 5.0
initial_velocity_min = 30.0
initial_velocity_max = 30.0
color = Color(1, 0.658824, 0, 1)
turbulence_enabled = true
collision_mode = 1
collision_friction = 0.0
collision_bounce = 0.0
collision_use_scale = true

[sub_resource type="QuadMesh" id="QuadMesh_r5teo"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_q8epi"]
transparency = 1
blend_mode = 1
cull_mode = 2
shading_mode = 0
vertex_color_use_as_albedo = true
vertex_color_is_srgb = true
albedo_texture = ExtResource("3_kstye")
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_4yba3"]
emission_shape = 6
emission_ring_axis = Vector3(0, 1, 0)
emission_ring_height = 0.5
emission_ring_radius = 50.0
emission_ring_inner_radius = 4.0
direction = Vector3(0, 1, 0)
spread = 5.0
initial_velocity_min = 30.0
initial_velocity_max = 30.0
turbulence_enabled = true
collision_mode = 1
collision_friction = 0.0
collision_bounce = 0.0
collision_use_scale = true

[sub_resource type="QuadMesh" id="QuadMesh_44xct"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_8gfme"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:scale")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath(".:rotation_edit_mode")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath(".:rotation_order")
properties/4/spawn = true
properties/4/replication_mode = 1
properties/5/path = NodePath("Head:rotation")
properties/5/spawn = true
properties/5/replication_mode = 1
properties/6/path = NodePath("Head:position")
properties/6/spawn = true
properties/6/replication_mode = 1
properties/7/path = NodePath("Head:scale")
properties/7/spawn = true
properties/7/replication_mode = 1
properties/8/path = NodePath("Head/Camera3D:rotation")
properties/8/spawn = true
properties/8/replication_mode = 1
properties/9/path = NodePath("Head/Camera3D:position")
properties/9/spawn = true
properties/9/replication_mode = 1
properties/10/path = NodePath("Head/Camera3D:scale")
properties/10/spawn = true
properties/10/replication_mode = 1
properties/11/path = NodePath(".:hearth")
properties/11/spawn = true
properties/11/replication_mode = 1
properties/12/path = NodePath(".:body_temperature")
properties/12/spawn = true
properties/12/replication_mode = 1
properties/13/path = NodePath(".:body_oxygen")
properties/13/spawn = true
properties/13/replication_mode = 1
properties/14/path = NodePath(".:mass")
properties/14/spawn = true
properties/14/replication_mode = 1
properties/15/path = NodePath(".:body_wind")
properties/15/spawn = true
properties/15/replication_mode = 1
properties/16/path = NodePath(".:body_bradiation")
properties/16/spawn = true
properties/16/replication_mode = 1
properties/17/path = NodePath(".:Outdoor")
properties/17/spawn = true
properties/17/replication_mode = 1
properties/18/path = NodePath(".:IsInWater")
properties/18/spawn = true
properties/18/replication_mode = 1
properties/19/path = NodePath(".:IsInLava")
properties/19/spawn = true
properties/19/replication_mode = 1
properties/20/path = NodePath(".:username")
properties/20/spawn = true
properties/20/replication_mode = 1
properties/21/path = NodePath(".:id")
properties/21/spawn = true
properties/21/replication_mode = 1
properties/22/path = NodePath(".:points")
properties/22/spawn = true
properties/22/replication_mode = 1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tl0tp"]
shader = ExtResource("7_787g2")
shader_parameter/amplitude = 0.1
shader_parameter/frequency = 1.0
shader_parameter/speed = 1.0
shader_parameter/Shader_color = Color(0, 0, 1, 0.0862745)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ynsy4"]
shader = ExtResource("8_txqea")
shader_parameter/amplitude = 0.1
shader_parameter/frequency = 1.0
shader_parameter/speed = 1.0
shader_parameter/Shader_color = Color(1, 0.6, 0, 0.360784)

[node name="Player" type="CharacterBody3D" groups=["player", "wind_effected_objects"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
script = ExtResource("1_btpoi")
metadata/_edit_horizontal_guides_ = [-952.0]

[node name="Collision" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_xeewm")

[node name="CSGMesh3D" type="CSGMesh3D" parent="."]
mesh = SubResource("CapsuleMesh_ypag4")
material = SubResource("StandardMaterial3D_r4028")

[node name="Rain" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 32.7699, 0)
material_override = SubResource("StandardMaterial3D_y4sl8")
amount = 1000
sub_emitter = NodePath("../splash")
lifetime = 2.0
randomness = 0.44
collision_base_size = 1.0
visibility_aabb = AABB(-52.5862, -81.0138, -52.5908, 106.035, 82.2355, 103.329)
trail_enabled = true
process_material = SubResource("ParticleProcessMaterial_2km3b")
draw_pass_1 = SubResource("RibbonTrailMesh_hmkji")

[node name="GPUParticlesCollisionHeightField3D" type="GPUParticlesCollisionHeightField3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.35376, 0)
layers = 1048575
size = Vector3(2048, 2048, 2048)
update_mode = 1
follow_camera_enabled = true

[node name="splash" type="GPUParticles3D" parent="."]
material_override = SubResource("StandardMaterial3D_y17jh")
emitting = false
amount = 1000
randomness = 1.0
collision_base_size = 1.0
visibility_aabb = AABB(-50.7625, -30.6958, -50.0889, 101.258, 61.3925, 100.798)
process_material = SubResource("ParticleProcessMaterial_584xw")
draw_pass_1 = SubResource("QuadMesh_g5it5")

[node name="Dust" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 32.77, 0)
material_override = SubResource("StandardMaterial3D_yas20")
emitting = false
amount = 1000
lifetime = 5.0
randomness = 1.0
collision_base_size = 1.0
visibility_aabb = AABB(-83.9725, -83.9735, -85.2592, 173.056, 95.2556, 170.528)
process_material = SubResource("ParticleProcessMaterial_d0h3l")
draw_pass_1 = SubResource("RibbonTrailMesh_jh2bo")

[node name="Sand" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 32.77, 0)
material_override = SubResource("StandardMaterial3D_qhtnm")
emitting = false
amount = 1000
lifetime = 5.0
randomness = 1.0
collision_base_size = 1.0
visibility_aabb = AABB(-78.1474, -96.5119, -96.2781, 143.764, 97.7222, 180.52)
process_material = SubResource("ParticleProcessMaterial_5dllp")
draw_pass_1 = SubResource("QuadMesh_r5teo")

[node name="Snow" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 32.77, 0)
material_override = SubResource("StandardMaterial3D_q8epi")
emitting = false
amount = 1000
lifetime = 5.0
randomness = 1.0
collision_base_size = 1.0
visibility_aabb = AABB(-64.6803, -75.4599, -81.5125, 137.636, 80.7026, 156.326)
process_material = SubResource("ParticleProcessMaterial_4yba3")
draw_pass_1 = SubResource("QuadMesh_44xct")

[node name="Wind sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_fjmn6")

[node name="Wind Morerate sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_8ny0w")

[node name="Wind Extreme sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_qip45")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.171436)

[node name="Camera3D" type="Camera3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0307612, 0.608149, -0.407722)
current = true

[node name="SpotLight3D" type="SpotLight3D" parent="Head/Camera3D"]
shadow_enabled = true

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_8gfme")

[node name="Underwater" type="CanvasLayer" parent="."]
process_mode = 3
visible = false

[node name="ColorRect" type="ColorRect" parent="Underwater"]
material = SubResource("ShaderMaterial_tl0tp")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="UnderLava" type="CanvasLayer" parent="."]
process_mode = 3
visible = false

[node name="ColorRect" type="ColorRect" parent="UnderLava"]
material = SubResource("ShaderMaterial_ynsy4")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Pause menu" type="CanvasLayer" parent="."]
process_mode = 3
visible = false
script = ExtResource("2_vj7s0")

[node name="Panel" type="Panel" parent="Pause menu"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Menu" type="VBoxContainer" parent="Pause menu"]
process_mode = 3
offset_left = 508.0
offset_top = 305.0
offset_right = 815.0
offset_bottom = 625.0
scale = Vector2(3, 1.5)

[node name="Return" type="Button" parent="Pause menu/Menu"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Return"

[node name="Settings" type="Button" parent="Pause menu/Menu"]
process_mode = 3
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Settings"

[node name="Reset Player" type="Button" parent="Pause menu/Menu"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Reset Player"

[node name="Exit" type="Button" parent="Pause menu/Menu"]
process_mode = 3
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Exit"

[node name="Settings" type="VBoxContainer" parent="Pause menu"]
process_mode = 3
visible = false
offset_left = 431.0
offset_top = 229.0
offset_right = 766.0
offset_bottom = 742.0
scale = Vector2(3, 1.5)

[node name="fps" type="CheckButton" parent="Pause menu/Settings"]
process_mode = 3
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "FPS:"

[node name="vsync" type="CheckButton" parent="Pause menu/Settings"]
process_mode = 3
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Vsync:"

[node name="antialiasing" type="CheckButton" parent="Pause menu/Settings"]
process_mode = 3
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Antialiasing:"

[node name="Fullscreen" type="CheckButton" parent="Pause menu/Settings"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Fullscreen:"

[node name="Resolutions Label" type="Label" parent="Pause menu/Settings"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Resolution:"

[node name="resolutions" type="OptionButton" parent="Pause menu/Settings"]
layout_mode = 2
theme_override_font_sizes/font_size = 30

[node name="Volumen Label" type="Label" parent="Pause menu/Settings"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Volumen:"

[node name="Volumen" type="HSlider" parent="Pause menu/Settings"]
layout_mode = 2
max_value = 1.0
step = 0.001

[node name="Volumen Music Label2" type="Label" parent="Pause menu/Settings"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Music Volumen:"

[node name="Volumen Music" type="HSlider" parent="Pause menu/Settings"]
layout_mode = 2
max_value = 1.0
step = 0.001

[node name="TIme label" type="Label" parent="Pause menu/Settings"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Time disaster/weather:"

[node name="Time" type="HSlider" parent="Pause menu/Settings"]
layout_mode = 2
max_value = 3600.0

[node name="Back" type="Button" parent="Pause menu/Settings"]
process_mode = 3
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Back"

[node name="Players List Menu" type="CanvasLayer" parent="."]
process_mode = 3
script = ExtResource("8_u7k75")

[node name="Panel" type="Panel" parent="Players List Menu"]
offset_left = 738.0
offset_top = 288.0
offset_right = 778.0
offset_bottom = 328.0
scale = Vector2(9.75896, 11.5355)

[node name="List" type="VBoxContainer" parent="Players List Menu/Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Hud" type="CanvasLayer" parent="."]
process_mode = 3
script = ExtResource("3_pgssk")

[node name="FPS" type="Label" parent="Hud"]
offset_left = 15.0
offset_top = 811.0
offset_right = 55.0
offset_bottom = 834.0
theme_override_font_sizes/font_size = 30
text = "FPS:"

[node name="Panel" type="Panel" parent="Hud"]
process_mode = 3
offset_left = 2.0
offset_top = 865.0
offset_right = 45.0
offset_bottom = 905.0
scale = Vector2(8.35709, 5.28957)

[node name="Label" type="Label" parent="Hud"]
process_mode = 3
offset_left = 17.0
offset_top = 875.0
offset_right = 63.0
offset_bottom = 898.0
text = "Temp: 17º
Humidity: 20%
Wind Direction: 0º
Wind Velocity: 0 km
Body Temp: 37º
Body Oxygen: 100%
Body Health: 100

"

[node name="Panel2" type="Panel" parent="Hud"]
process_mode = 3
offset_left = 199.0
offset_top = 894.0
offset_right = 248.0
offset_bottom = 934.0
scale = Vector2(2.92153, 3.89434)

[node name="Heart" type="Sprite2D" parent="Hud"]
process_mode = 3
position = Vector2(272.5, 972.5)
scale = Vector2(1.08594, 1.19531)
texture = ExtResource("4_ni53t")

[node name="Heartbeat" type="AudioStreamPlayer" parent="Hud"]
process_mode = 3
stream = ExtResource("6_vn0ni")

[node name="Warning Hud" type="CanvasLayer" parent="."]
process_mode = 3
script = ExtResource("7_k0mbh")

[node name="Panel" type="Panel" parent="Warning Hud"]
process_mode = 3
offset_left = 711.0
offset_top = 1.0
offset_right = 754.0
offset_bottom = 41.0
scale = Vector2(9.91709, 5.28957)

[node name="Label" type="Label" parent="Warning Hud"]
process_mode = 3
offset_left = 726.0
offset_top = 11.0
offset_right = 878.0
offset_bottom = 216.0
text = "Current Disasters/Weather is:"

[node name="Panel2" type="Panel" parent="Warning Hud"]
process_mode = 3
offset_left = 972.0
offset_top = 27.0
offset_right = 1021.0
offset_bottom = 67.0
scale = Vector2(2.92153, 3.89434)

[node name="Sprite2D" type="Sprite2D" parent="Warning Hud"]
position = Vector2(1042, 102)
scale = Vector2(7.58173, 7.86641)
texture = ExtResource("8_5jfek")

[node name="Chat" type="CanvasLayer" parent="."]
process_mode = 3
script = ExtResource("6_wgonp")

[node name="TextEdit" type="TextEdit" parent="Chat"]
process_mode = 3
offset_top = 606.0
offset_right = 284.0
offset_bottom = 770.0
editable = false

[node name="LineEdit" type="LineEdit" parent="Chat"]
process_mode = 3
offset_left = 2.0
offset_top = 770.0
offset_right = 230.0
offset_bottom = 801.0

[node name="Button" type="Button" parent="Chat"]
process_mode = 3
offset_left = 231.0
offset_top = 769.0
offset_right = 281.0
offset_bottom = 800.0
text = "Enter"

[node name="Mobile Buttons" type="CanvasLayer" parent="."]

[node name="Virtual Joystick" parent="Mobile Buttons" instance=ExtResource("14_nhtb3")]
offset_left = 16.0
offset_top = -298.0
offset_right = 316.0
offset_bottom = 2.0
joystick_mode = 1
visibility_mode = 2

[node name="pause" type="TouchScreenButton" parent="Mobile Buttons"]
position = Vector2(37, 31)
scale = Vector2(10, 9.032)
texture_normal = ExtResource("15_beddy")
action = "Pause"
visibility_mode = 1

[node name="jump" type="TouchScreenButton" parent="Mobile Buttons"]
position = Vector2(1589, 841)
scale = Vector2(10, 10)
texture_normal = ExtResource("16_p2ihs")
action = "ui_accept"
visibility_mode = 1

[connection signal="pressed" from="Pause menu/Menu/Return" to="Pause menu" method="_on_return_pressed"]
[connection signal="pressed" from="Pause menu/Menu/Settings" to="Pause menu" method="_on_settings_pressed"]
[connection signal="pressed" from="Pause menu/Menu/Reset Player" to="Pause menu" method="_on_reset_player_pressed"]
[connection signal="pressed" from="Pause menu/Menu/Exit" to="Pause menu" method="_on_exit_pressed"]
[connection signal="toggled" from="Pause menu/Settings/fps" to="Pause menu" method="_on_fps_toggled"]
[connection signal="toggled" from="Pause menu/Settings/vsync" to="Pause menu" method="_on_vsync_toggled"]
[connection signal="toggled" from="Pause menu/Settings/antialiasing" to="Pause menu" method="_on_antialiasing_toggled"]
[connection signal="toggled" from="Pause menu/Settings/Fullscreen" to="Pause menu" method="_on_fullscreen_toggled"]
[connection signal="item_selected" from="Pause menu/Settings/resolutions" to="Pause menu" method="_on_resolutions_item_selected"]
[connection signal="value_changed" from="Pause menu/Settings/Volumen" to="Pause menu" method="_on_volumen_value_changed"]
[connection signal="value_changed" from="Pause menu/Settings/Volumen Music" to="Pause menu" method="_on_volumen_music_value_changed"]
[connection signal="value_changed" from="Pause menu/Settings/Time" to="Pause menu" method="_on_time_value_changed"]
[connection signal="pressed" from="Pause menu/Settings/Back" to="Pause menu" method="_on_back_pressed"]
[connection signal="pressed" from="Chat/Button" to="Chat" method="_on_button_pressed"]
